stylesheet.less
/* ... */
.widget.socialicons span.bk-socialicons-rss a,
.widget.profile .bk-profile-socialicons span.bk-socialicons-rss a {
	background-image: image('/images/social/socialicons-rss.png')
}

.widget.socialicons span.bk-socialicons-googleplus a,
.widget.profile .bk-profile-socialicons span.bk-socialicons-googleplus a {
	background-image: image('/images/social/socialicons-googleplus.png')
}

.widget.socialicons span.bk-socialicons-youtube a,
.widget.profile .bk-profile-socialicons span.bk-socialicons-youtube a {
	background-image: image('/images/social/socialicons-youtube.png')
}

.widget.paypalbuynow .widget.button.paypal {
	background-image: image('/images/social/socialicons-paypal.png')
}
.widget.tweet a {
	background-image: image('/images/social/socialicons-twitter.png')
}
.widget.dropbox button {
	background-image: image('/images/social/socialicons-dropbox.png')
}

@media @tablet {
	.header-logo {
		padding-top: 10px;
	}
	.widget .extendednavigation a.pull {
		left: 10px;
		right: auto;
		top: 19px;
		&:after {
			right: 7px;
			background-color: @color-swatch2;
			box-shadow: 0 6px 0 @color-swatch2, 0 12px 0 @color-swatch2;
		}
	}
	.template-nav {
		position: relative;
		min-height: 57px;
		&:before {
			display: none;
		}
		.widget.ecombasket {
			position: absolute;
			top: 0;
			right: 0;
		}
	}
	.widget .extendednavigation {
		ul {
			padding-top: 56px;
		}
		ul li {
			padding: 0;
			border-bottom: 1px solid @borders-blocks;
		}
		> ul > li {
			border-right: 0;
			&.folder:after {
				right: 20px;
				top: 47%;
			}
			&:hover ul {
				top: 40px;
				left: 0;
				a {
					padding: 14px 20px 15px;
				}
			}
		}
	}
	.widget.companyname {
	}
	.page-wrap {
		padding: 20px;
	}
	.section.main h3 {
		margin: 0 8px;
	}
	.menu-subsection {
		&:before, &:after {
			display: none;
		}
	}
}

